# swe-oa1-pen-plotter

./: .gitignore  README.md  plotter_control.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  test_rectangle.py  test_straight_line.py
docs/: ARCHITECTURE.md  ASSIGNMENT.md  CALIBRATION.md  EXAMPLES.md  FIRMWARE.md  README.md
examples/: README.md
examples/example_firmware/: example_firmware.ino
firmware/pen_plotter/: pen_plotter.ino
penplotter/: __init__.py  __main__.py  config.py
penplotter/control/: __init__.py  curves.py  executor.py  primitives.py  shapes.py
penplotter/data/: path.py
penplotter/drawing/: __init__.py  shapes.py
penplotter/hardware/: __init__.py  plotter.py
penplotter/kinematics/: __init__.py  transforms.py
penplotter/path/: __init__.py  bezier.py  interpolation.py
penplotter/ui/: __init__.py
penplotter/visualization/: interactive.py  live.py  styles.py
tests/: test_rectangle.py  test_straight_line.py
